--- a/vista_estadisticas.css
+++ b/vista_estadisticas.css
@@ -97,66 +97,51 @@ body{
 }
 
 .contenedor__inicio-titulo {
-    font-size: 4rem;
+    font-size: 2.5rem;
     color: var(--azul--primario);
     margin-bottom: 2rem;
 }
 
-.contenedor__buscador {
+.contenedor__estadisticas {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
     margin: 20px;
+}
+
+.card__estadisticas {
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 10px;
+    width: 250px;
     text-align: center;
-
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-#buscador {
-    width: 60%;
-    padding: 10px;
-    font-size: 1.5rem;
-    border-radius: 0.5rem;
-    background-color: #e0dfdf;
+.imagen__card {
+    height: 50px;
+    margin-bottom: 10px;
 }
 
-.contenedor__encuestas-totales{
-    max-width: 1080px;
-    margin: 0 auto;
-}
-
-
-.contenedor__encuesta{
-    max-width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.contenedor__encuesta-derecho{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-}
-
-.logo_encuesta{
-    width: 10rem;
-}
-
-.detalle_encuesta{
-    font-size: 1.5rem;
-    
-}
-
-.ver_resultados{
-    border-radius: 1rem;
-    height: 3rem;
-    cursor: pointer;
-    font-size: 1.5rem;
-    border: none;
-    background-color: var(--azul--primario);
-    padding: 0rem 2rem;
-    color: var(--blanco--primario);
+.estado__card {
+    font-size: 18px;
     font-weight: bold;
-    transition: background-color 0.3s ease;
+    color: #333;
 }
+
+.titulo__card {
+    font-size: 24px;
+    margin: 10px 0;
+    color: #333;
+}
+
+.parrafo__card {
+    font-size: 14px;
+    margin-bottom: 10px;
+    color: #666;
+}
+
 
 @media (width < 769px) {
 
@@ -194,12 +179,4 @@ body{
         padding: 1rem 1rem;
     }
 
-    .contenedor__encuesta{
-        flex-direction: column;
-        gap: 2rem;
-    }
-    
-    .contenedor__encuesta-derecho{
-        flex-direction: column;
-    }
 }
