--- a/vista_perfil_estadisticas.css
+++ b/vista_perfil_estadisticas.css
@@ -102,6 +102,73 @@ body{
     margin-bottom: 2rem;
 }
 
+.contenedor__perfil {
+    text-align: center;
+    margin: 20px 0;
+}
+
+.imagen__perfil {
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
+
+.titulo__perfil {
+    font-size: 24px;
+    margin: 10px 0;
+}
+
+.perfil__subtitulo {
+    font-size: 16px;
+    color: #666;
+    margin-bottom: 20px;
+}
+
+.editar__perfil {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.contenedor__informacion-personal {
+    margin: 20px;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 1080px;
+    margin: 0 auto;
+}
+
+.titulo__informacion-personal {
+    font-size: 24px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.informacion__personal {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.informacion__personal img {
+    height: 40px;
+    margin-right: 20px;
+}
+
+.parrafo__informacion-personal {
+    font-size: 18px;
+    margin: 0;
+}
+
+.nombre {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 0;
+    padding-left: 2rem;
+}
+
 .contenedor__estadisticas {
     display: flex;
     justify-content: space-around;
@@ -232,6 +299,73 @@ input[type="date"] {
     .contenedor__inicio-titulo {
         font-size: 3rem;
         padding: 1rem 1rem;
+    }
+
+    .contenedor__perfil {
+        text-align: center;
+        margin: 20px;
+    }
+    
+    .imagen__perfil {
+        height: 100px;
+        border-radius: 50%;
+        margin-bottom: 10px;
+    }
+    
+    .titulo__perfil {
+        font-size: 24px;
+        margin: 10px 0;
+    }
+    
+    .perfil__subtitulo {
+        font-size: 16px;
+        color: #666;
+        margin-bottom: 20px;
+    }
+    
+    .editar__perfil {
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+    }
+    
+    .contenedor__informacion-personal {
+        margin: 20px;
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        max-width: 1080px;
+        margin: 0 auto;
+    }
+    
+    .titulo__informacion-personal {
+        font-size: 24px;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    
+    .informacion__personal {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+    
+    .informacion__personal img {
+        height: 40px;
+        margin-right: 20px;
+    }
+    
+    .parrafo__informacion-personal {
+        font-size: 18px;
+        margin: 0;
+    }
+    
+    .nombre {
+        font-size: 18px;
+        font-weight: bold;
+        margin: 0;
+        padding-left: 2rem;
     }
 
 }
